// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renderiza 1`] = `
<div>
  <button
    class="sc-bcXHqe zyfwZ"
  >
    Clique aqui
  </button>
</div>
`;

exports[`Button renderiza desabilitado 1`] = `
<div>
  <button
    class="sc-bcXHqe zyfwZ"
    disabled=""
  >
    Desabilitado
  </button>
</div>
`;
